--- a/Datacamp/Visualizing Time Series Data in Python/Line Plots.ipynb
+++ b/Datacamp/Visualizing Time Series Data in Python/Line Plots.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Read the data\n",
-    "DATA_DIR = \"/home/rlz-98/Documents/GitHub/Courses/Datacamp/Visualizing Time Series Data in Python\""
+    "DATA_DIR = \"x""
    ]
   },
   {
