Revert "Update line plots"
This reverts commit 8fa2175f0402da4a8b64ee0fdf41e53350c7022f.

--- a/Datacamp/Visualizing Time Series Data in Python/Line Plots.ipynb
+++ b/Datacamp/Visualizing Time Series Data in Python/Line Plots.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Read the data\n",
-    "DATA_DIR = \"x""
+    "DATA_DIR = \"/home/rlz-98/Documents/GitHub/Courses/Datacamp/Visualizing Time Series Data in Python\""
    ]
   },
   {
