Update line plots

--- a/Datacamp/Visualizing Time Series Data in Python/Line Plots.ipynb
+++ b/Datacamp/Visualizing Time Series Data in Python/Line Plots.ipynb
@@ -18,13 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "749b7bb2-91fe-499e-97af-f64aa81017d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f38a7b7d-3310-4f00-9f75-67515dc09671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run \"variables.py\""
    ]
   },
   {
@@ -41,18 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e52cf1f8-4e65-4271-b8c6-a884e1c5b7cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the data\n",
-    "DATA_DIR = \"/home/rlz-98/Documents/GitHub/Courses/Datacamp/Visualizing Time Series Data in Python\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c8db130b-6d69-4ace-b301-2cba07a21adb",
    "metadata": {},
    "outputs": [],
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "8e678b28-c089-460a-8b1a-38673621c61f",
    "metadata": {},
    "outputs": [
@@ -166,7 +165,7 @@
        "4  25.990511  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "f3eaa49d-4234-43c5-939e-df36fa536a90",
    "metadata": {},
    "outputs": [
@@ -204,7 +203,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
